# QuartzDemo

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
notes/: Lights.md  Plan.md
notes/.obsidian/: appearance.json  community-plugins.json  hotkeys.json  workspace.json
notes/.obsidian/plugins/obsidian-admonition/: data.json
notes/.obsidian/plugins/obsidian-style-settings/: data.json
notes/.obsidian/themes/Things/: theme.css
notes/Roadmap/Ideas/: Modules.md
notes/Roadmap/V0.0.0 - Minimum usable/: V0.1.0 Roadmap.md
notes/Roadmap/V0.0.x - Minimum usable/: V0.1.0 Roadmap.md
notes/Roadmap/V0.1.0 - Minimum usable/: V0.1.0 Overview.md  V0.1.0 Roadmap.md
res/shaders/: 0_blank.frag  0_blank.vert  1_lights.frag  2_normal.frag  3_pbr-old.frag  3_pbr.frag  4_ibl.frag  blank.frag  blank.vert  s_skybox.frag  s_skybox.vert  t_bufferalignment.frag  t_convolution.vert  t_convolutionBrdf.frag  t_convolutionDiffuse.frag  t_convolutionSpecular.frag  t_tests.frag  x_light.frag
res/shaders/compiled/: 0_blank.frag.spv  0_blank.vert.spv  1_lights.frag.spv  2_normal.frag.spv  3_pbr-old.frag.spv  3_pbr.frag.spv  4_ibl.frag.spv  blank.frag.spv  blank.vert.spv  s_skybox.frag.spv  s_skybox.vert.spv  t_bufferalignment.frag.spv  t_convolution.frag.spv  t_convolution.vert.spv  t_convolutionBrdf.frag.spv  t_convolutionDiffuse.frag.spv  t_convolutionSpecular.frag.spv  t_tests.frag.spv  x_light.frag.spv
src/: main.cpp  sandbox.h  sandbox_imgui.cpp  sandbox_init.cpp  sandbox_shutdown.cpp  sandbox_update.cpp
(+37 files in other folders)
